--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,4 +1,4 @@
-database.driver=com.mysql.cj.jdbc.Driver
-database.url=jdbc:mysql://localhost:3306/library3
-database.username=root
-database.password=MyS01serFe2
+database.driver=org.postgresql.Driver
+database.url=${DB_URL}
+database.username=${DB_USERNAME}
+database.password=${DB_PASSWORD}
