--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -1,4 +1,4 @@
-hibernate.dialect=org.hibernate.dialect.MySQLDialect
+hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 hibernate.show_sql = false
 hibernate.hbm2ddl.auto = create-drop
 hibernate.cache.use_second_level_cache = false
